# FracLib

./: .gitignore  CHANGELOG.md  CMakeLists.txt  FracLibConfig.cmake.in  README.md  build.bat  build.sh  test.bat
example/: CMakeLists.txt  build.bat  build.sh  run.bat  run.sh
example/src/: main.cpp
include/: frac.h
src/: frac.cpp
tests/: Tester.h  main.cpp
